--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "gitignore": "^0.7.0",
     "inquirer": "^8.2.4",
     "mysql2": "^3.9.1"
   },
